src/main/default/objects/cfp_FunctionalProcess__c/cfp_FunctionalProcess__c.object-meta.xml
<CustomObject>
    <label>Functional Process</label>
    <nameField>
        <label>cfp_FunctionalProcess Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Functional Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>