src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Early_And_Rapid_Estimation_Size__c.field-meta.xml
<CustomField>
    <fullName>cfp_Early_And_Rapid_Estimation_Size__c</fullName>
    <inlineHelpText>Small:5,
Medium:8,
Large:14,
Very Large:30+</inlineHelpText>
    <label>Early And Rapid Estimation Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Large</fullName>
            </value>
            <value>
                <fullName>Very Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>