src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Estimated_Size__c.field-meta.xml
<CustomField>
    <fullName>cfp_Estimated_Size__c</fullName>
    <formula>CASE(
  cfp_Early_And_Rapid_Estimation_Size__c,
  &quot;Small&quot;,  5,
  &quot;Medium&quot;,  8,
  &quot;Large&quot;, 14,
		&quot;Very Large&quot;, 30,
  0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>