src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_inComplete__c.field-meta.xml
<CustomField>
    <fullName>cfp_inComplete__c</fullName>
    <formula>if( cfp_incompleteSteps__c &gt; 0, IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Red&quot;, 16, 16), IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Green&quot;, 16, 16))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Status</label>
    <type>Text</type>
</CustomField>