src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_incompleteSteps__c.field-meta.xml
<CustomField>
    <fullName>cfp_incompleteSteps__c</fullName>
    <label>inComplete Steps</label>
    <summaryFilterItems>
        <field>cfp_Data_Movements__c.cfp_isComplete__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>cfp_Data_Movements__c.cfp_FunctionalProcess__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>