src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_is_reUsed__c.field-meta.xml
<CustomField>
    <fullName>cfp_is_reUsed__c</fullName>
    <formula>NOT(ISBLANK(cfp_Reused_from_Functional_Process__c))</formula>
    <label>is reUsed</label>
    <type>Checkbox</type>
</CustomField>