src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Name_Ordered__c.field-meta.xml
<CustomField>
    <fullName>cfp_Name_Ordered__c</fullName>
    <formula>cfp_Sub_System__c &amp; &apos;-&apos; &amp; TEXT(cfp_Order__c) &amp; &apos;-&apos; &amp; Name &amp; &apos;-&apos; &amp; TEXT(cfp_Total_Function_Points__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Ordered</label>
    <type>Text</type>
</CustomField>