src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Order__c.field-meta.xml
<CustomField>
    <fullName>cfp_Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>