src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Realised_Range__c.field-meta.xml
<CustomField>
    <fullName>cfp_Realised_Range__c</fullName>
    <formula>IF(cfp_Total_Function_Points__c &lt;= 5, &quot;small&quot;,
IF(cfp_Total_Function_Points__c &lt;= 8, &quot;medium&quot;,
IF(cfp_Total_Function_Points__c &lt;= 14,&quot;large&quot;,
&quot;very large&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Realised Range</label>
    <type>Text</type>
</CustomField>