src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Sub_System__c.field-meta.xml
<CustomField>
    <fullName>cfp_Sub_System__c</fullName>
    <label>Sub System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>