src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Sum_of_LowCode__c.field-meta.xml
<CustomField>
    <fullName>cfp_Sum_of_LowCode__c</fullName>
    <label>Sum of LowCode</label>
    <summarizedField>cfp_Data_Movements__c.cfp_isLowCode__c</summarizedField>
    <summaryForeignKey>cfp_Data_Movements__c.cfp_FunctionalProcess__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>