src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Texttual_Overview__c.field-meta.xml
<CustomField>
    <fullName>cfp_Texttual_Overview__c</fullName>
    <label>Texttual Overview</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>