src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_Total_Function_Points__c.field-meta.xml
<CustomField>
    <fullName>cfp_Total_Function_Points__c</fullName>
    <formula>cfp_Sum_of_Config__c +  cfp_Sum_Of_ootb__c  +  cfp_Sum_of_LowCode__c +  cfp_Sum_of_ProCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Function Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>