src/main/default/objects/cfp_FunctionalProcess__c/fields/cfp_triggeringevent__c.field-meta.xml
<CustomField>
    <fullName>cfp_triggeringevent__c</fullName>
    <label>Triggering Event</label>
    <length>255</length>
    <type>Text</type>
</CustomField>