src/main/default/objects/cfp_FunctionalProcess__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cfp_inComplete__c</columns>
    <columns>cfp_incompleteSteps__c</columns>
    <columns>cfp_Order__c</columns>
    <columns>cfp_Total_Function_Points__c</columns>
    <columns>cfp_System_Context__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>