src/main/default/objects/cfp_FunctionalProcess__c/listViews/cfp_Compare_Forecast_to_Actual.listView-meta.xml
<ListView>
    <fullName>cfp_Compare_Forecast_to_Actual</fullName>
    <columns>NAME</columns>
    <columns>cfp_Early_And_Rapid_Estimation_Size__c</columns>
    <columns>cfp_Estimated_Size__c</columns>
    <columns>cfp_Realised_Range__c</columns>
    <columns>cfp_Total_Function_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>Compare Forecast to Actual</label>
</ListView>